scopes/ui-foundation/use-box/dropdown/dropdown.module.scss
@import '~@teambit/base-ui.layout.breakpoints/_breakpoints.scss';
@import '~@teambit/ui-foundation.ui.constants.z-indexes/z-indexes.module.scss';

.useBox {
  z-index: $modal-z-index;
}

.menu {
  padding: 0;
  font-size: var(--bit-p-xs, 14px);
  border-radius: 6px;
  width: 400px;
}

.placeholder {
  color: #37b26c; // use accent here
  border: 1px solid #37b26c; // use accent here
  background-color: var(--bit-bg-color, #ffffff);
  cursor: pointer;
  box-sizing: border-box;
  display: flex;
  align-items: center;
  padding: 0 6px;
  height: 30px;
  border-radius: 6px;
  user-select: none;
  transition: background-color 300ms, color 300ms ease-in-out;
  &:hover {
    color: var(--bit-bg-color, #ffffff);
    background-color: #2e945a; // use accent here
    border-color: #2e945a; // use accent here
  }
  @media screen and (max-width: $br-md) {
    padding: 0 8px;
    .content {
      display: none;
    }
  }
  > span {
    &:first-child {
      font-size: 17px;
    }
  }
  [data-open='true'] & {
    transition: color 300ms, background-color 300ms ease-in-out;
    color: var(--bit-bg-color, #ffffff);
    background-color: #2e945a; // use accent here
    border-color: #2e945a; // use accent here
  }
  > div {
    padding: 0 6px;
  }
}

